@@ -8,7 +8,7 @@ Standards-Version: 3.8.1
 
 Package: parrot
 Architecture: any
-Depends: parrot-minimal (= ${binary:Version})
+Depends: ${shlibs:Depends}, parrot-minimal (= ${binary:Version})
 Suggests: parrot-doc
 Provides: parrot-test, parrot-data-dumper
 Description: A virtual machine for dynamic languages
@@ -19,6 +19,8 @@ Description: A virtual machine for dynamic languages
 Package: parrot-minimal
 Architecture: any
 Depends: ${shlibs:Depends}
+Conflicts: parrot ( < 1.0.0 )
+Replaces: parrot ( < 1.0.0 )
 Description: A minimal install of the Parrot VM
  This package contains the core Parrot virtual machine. It's all that you need
  to get up and running in the average use case, and is sufficient to run most
@@ -54,8 +56,10 @@ Description: Parrot documentation
 Package: parrot-devel
 Architecture: any
 Section: devel
-Depends: parrot, perl
+Depends: ${shlibs:Depends}, parrot, perl
 Provides: parrot-pge, parrot-tge, parrot-pct, parrot-nqp
+Conflicts: parrot ( < 1.0.0 ), libparrot-dev ( < 1.0.0 )
+Replaces: parrot ( < 1.0.0 ), libparrot-dev ( < 1.0.0 )
 Description: Parrot development tools
  This package contains development tools for the Parrot virtual machine. It is
  essential for developing language implementations to run on Parrot, but not
